<resources>
    <string name="app_name">Car Rental</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_save">Save</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_confirm">Confirm</string>
    <string name="status_active">active</string>
    <string name="status_finish">finish</string>
    <string name="order_detail">detail</string>
    <string name="dialog_error_title">Oops...</string>
    <string name="dialog_confirmation">Confirmation</string>
    <string name="dialog_add_car_question">Are you sure want to save a new car?</string>
    <string name="dialog_update_car_question">Are you sure want to update this car?</string>
    <string name="dialog_success_title">Successfully!</string>
    <string name="dialog_delete_question">Are you sure want to delete it?</string>
    <string name="dialog_car_success_add">has been successfully saved</string>
    <string name="dialog_car_success_update">has been successfully updated</string>
    <string name="dialog_car_success_delete">has been successfully deleted</string>
    <string name="dialog_submit_order_question">Are you sure want to submit order?</string>
    <string name="dialog_order_success">Your order has been successfully submitted</string>
    <string name="dialog_wait">Please wait...</string>
    <string name="validation_required">This field is required</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_order">Order</string>
    <string name="action_update">Update</string>
    <string name="action_delete">Delete</string>
    <string name="action_detail">Detail</string>
    <string name="add_new_car_title">Add New Car</string>
    <string name="add_new_user_title">New User</string>
    <string name="detail_user_title">User Detail</string>
    <string name="update_car_title">Update Car</string>
    <string name="add_new_car_brand">Car Brand</string>
    <string name="add_new_car_model">Car Model</string>
    <string name="add_new_car_license">Car License Plat</string>
    <string name="add_new_car_fare">Fare per Day</string>
    <string name="date_not_correct">Please select correct date</string>
    <string name="add_user_question">Are you sure want to save a new user?</string>
    <string name="hint_user_name">Name</string>
    <string name="hint_user_address">Address</string>
    <string name="hint_user_mobile">Mobile Phone</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_order_car">Order</string>

    <string-array name="tab_name">
        <item>Orders</item>
        <item>Cars</item>
        <item>Users</item>
    </string-array>
    <string name="title_activity_order_car_detail">Order Detail</string>
</resources>
